Fix fullscreen button behavior and toolbar visibility - Implement fullscreen mode without hiding the toolbar. - Toggle fullscreen and unfullscreen buttons correctly.

--- a/activities/Calculate.activity/css/activity.css
+++ b/activities/Calculate.activity/css/activity.css
@@ -34,22 +34,32 @@
   background-image: url(../icons/digits-6.svg);
   display: none;
 }
-#fullscreen-button {
-  background-image: url(../icons/view-fullscreen.svg);
-}
-#unfullscreen-button {
-  background-image: url(../icons/view-return.svg);
+#fullscreen-container {
+  position: relative;
+  display: inline;
+  }
+  #fullscreen-button, #unfullscreen-button {
+  background-size: contain;
+  background-repeat: no-repeat;
   border: 0;
   border-radius: 0px;
-  margin: 1px;
+  margin: 0;
   width: 45px;
   height: 45px;
+  position: absolute;
   top: 5px;
-  right: 3%;
-  position: fixed;
-  visibility: hidden;
+  right: 8px;
   z-index: 3;
-}
+  }
+  #fullscreen-button {
+  background-image: url(../icons/view-fullscreen.svg);
+  display: block;
+  }
+  
+  #unfullscreen-button {
+  background-image: url(../icons/view-return.svg);
+  display: none;
+  }
 .palette .wrapper {
   min-width: 10px;
   padding: 5px;
